more header left spacing fixes -.-

--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -1,8 +1,6 @@
 .ico {
   width: 2.5rem;
   height: 2.5rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
